preview img align fix

--- a/src/components/MebGenerator.module.scss
+++ b/src/components/MebGenerator.module.scss
@@ -121,6 +121,7 @@
   }
 
   .preview-img {
+    align-self: center;
     z-index: 3;
     max-width: 80vw;
     max-height: 20vh;
